# umd-fcrepo-oaipmh

./: .gitignore  Dockerfile  README.md  add_handles.md  docker-compose.yml  pyproject.toml  requirements.txt  test.requirements.txt
docs/: add_handles.md  configuration.md
docs/decisions/: 0001-record-architecture-decisions.md  0002-use-oai_repo-package.md  adr-template.md
src/oaipmh/: __init__.py  add_handles.py  dataprovider.py  oai.py  server.py  solr.py  web.py
src/oaipmh/static/: html.xsl  oai.css
src/oaipmh/transformers/: __init__.py  oai_dc.xsl  rdf.xsl
tests/: conftest.py  test_harvester.py  test_oai.py  test_solr.py
tests/dataprovider/: test_dataprovider.py  test_envattribute.py  test_functions.py  test_oaiidentifier.py
tests/dataprovider/test_dataprovider/: prange_poster.xml
tests/handles/: test_handles.py
tests/transformers/: test_transformer.py
tests/transformers/test_transformer/: no_xsi-schemaLocation.xsl
