[project]
name = "umd-fcrepo-oaipmh"
version = "1.0.0dev"
dependencies = [
    "flask",
    "lxml",
    "oai-repo",
    "pysolr",
    "python-dotenv",
    "PyYAML",
    "requests",
    "requests-jwtauth@git+https://github.com/umd-lib/requests-jwtauth.git@1.0.0",
    "waitress",
]
[project.optional-dependencies]
test = [
    "pycodestyle",
    "pytest",
    "pytest-cov",
]
[project.scripts]
fcrepo-oaipmh-server = "oaipmh.server:run"
add-handles = "oaipmh.add_handles:main"
